# anywho

./: .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dependencies.cmake  LICENSE  ProjectOptions.cmake  README.md  README_dependencies.md  README_docker.md  README_troubleshooting.md  design.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: constants.env
.github/workflows/: ci.yml  codeql-analysis.yml  gh-pages.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
docs/: Doxyfile  Doxyfile.in  README  conf.py  index.rst  requirements.txt
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
include/: CMakeLists.txt  aliases.hpp  anywho.hpp  concepts.hpp  context.hpp  direct_return.hpp  error_factories.hpp  error_from_exception.hpp  errors.hpp  extra.hpp  fixed_string.hpp  format.hpp  has_error.hpp  with_context.hpp
include/anywho/: concepts.hpp  context.hpp  direct_return.hpp  error_factories.hpp  error_from_exception.hpp  errors.hpp  fixed_string.hpp  sample_library.hpp  with_context.hpp
src/: CMakeLists.txt
src/direct_return/: CMakeLists.txt  example.cpp  macros.hpp
src/error/: CMakeLists.txt  concepts.hpp  context.hpp  fixed_string.hpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
